# flamenco-temp1

./: .arcconfig  .editorconfig  .gitignore  CHANGELOG.md  CONFIG_DESIGN.md  FEATURES.md  LICENSE  Makefile  README.md  debug-job-echo.sh  debug-job-render.sh  deploy.sh  flamenco-worker-credentials.yaml  flamenco-worker.yaml  go.mod  go.sum  main.go  pyproject.toml
addon/: .openapi-generator-ignore  README.md  generate-flamenco3-client.sh  mypy.ini  oapi_test_generated.py  pyproject.toml  test_jobtypes.py
addon/flamenco/: __init__.py  bat_interface.py  comms.py  dependencies.py  gui.py  job_submission.py  job_types.py  job_types_propgroup.py  manager_README.md  operators.py  preferences.py
addon/flamenco/bat/: interface.py  shaman.py  submodules.py
addon/flamenco/manager/: __init__.py  api_client.py  configuration.py
addon/flamenco/manager/api/: jobs_api.py  meta_api.py  shaman_api.py  worker_api.py  worker_mgt_api.py
addon/flamenco/manager/apis/: __init__.py
addon/flamenco/manager/docs/: AvailableJobSetting.md  AvailableJobType.md  BlenderPathCheckResult.md  Configuration.md  ConfigurationMeta.md  FlamencoVersion.md  Job.md  JobAllOf.md  JobBlocklistEntry.md  JobStatus.md  JobUpdate.md  JobsApi.md  ManagerConfiguration.md  MetaApi.md  PathCheckResult.md  RegisteredWorker.md  ShamanApi.md  ShamanCheckout.md  ShamanFileSpecWithStatus.md  ShamanFileSpecWithStatusAllOf.md  SocketIOJobUpdate.md  SocketIOSubscription.md  SubmittedJob.md  (+17 more)
addon/flamenco/wheels/: __init__.py  blender_asset_tracer-1.12.dev0-py3-none-any.whl  blender_asset_tracer-1.13-py3-none-any.whl
(+632 files in other folders)
