[tool.poetry]
name = "flamenco"
version = "2.3dev0"
description = ""
authors = [
    "Francesco Siddi <francesco@blender.org>",
    "Pablo Vazquez <pablo@blender.studio>",
    "Sybren Stüvel <sybren@blender.studio>",
]
include = ["CHANGELOG.md", "README.md", "LICENSE.txt"]

[tool.poetry.dependencies]
python = "~3.6"
cryptography = "2.7"
pillar = {path = "../pillar"}
pyjwt = "1.7.1"

[tool.poetry.dev-dependencies]
pillar-devdeps = {path = "../pillar/devdeps"}

[build-system]
requires = ["poetry==1.0","cryptography==2.7","setuptools==51.0.0","wheel==0.36.2"]
build-backend = "poetry.masonry.api"
