[tool.poetry]
name = "flamenco"
version = "3.0"
description = "Flamenco client add-on for Blender"
authors = ["Sybren A. Stüvel <sybren@blender.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
openapi-core = "^0.14.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
